# multibus

./: .gitignore  LICENSE  README.md
example/c/: CMakeLists.txt  README.md  max7219_32x8_demo.c  test_async.c  test_async_libev.c  test_sync.c
example/python/: README.md  multibus_bridge_synchronous.py  multibus_i2c_master_synchronous.py  multibus_lux_library_synchronous.py  multibus_playground_raw_bridge.py  multibus_playground_raw_i2c.py  multibus_spi_master_max7219_test.py  multibus_spi_master_synchronous.py
firmware/esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
firmware/esp32/main/: CBridge.cpp  CBridge.h  CBridgeDelayRequestOperation.h  CBridgeGetFirmwareVersionOperation.h  CBridgeGetHWInfoOperation.h  CBridgeGetProtocolVersionOperation.h  CBridgeGetSupportedComponentsOperation.h  CComponent.h  CComponentFactory.cpp  CComponentFactory.h  CHardwareInfo.cpp  CHardwareInfo.h  CI2CConfigOperation.h  CI2CMaster.cpp  CI2CMaster.h  CI2CReadOperation.h  CI2CWriteOperation.h  CMakeLists.txt  CMultiBusOperation.cpp  CMultiBusOperationExecutor.cpp  CMultiBusOperationExecutor.h  CSPIConfigOperation.h  CSPIGetNumChannelsOperation.h  CSPIMaster.cpp  CSPIMaster.h  CSPIMasterWriteOperation.h  CSerialMultiBusMessageReaderWriter.cpp  CSerialMultiBusMessageReaderWriter.h  CUartSerial.cpp  CUartSerial.h  IComponent.h  IMultiBusMessageReaderWriter.h  IMultiBusOperation.h  ISerial.h  SMultiBusMessage.cpp  SMultiBusMessage.h  main.cpp
firmware/pico/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c  usb_serial.h
host/c/: multibus_serial_posix.c  multibus_serial_posix.h
host/python/: i2c_master.py  multibus_bridge.py  multibus_connection.py  serial_connection.py  spi_master.py
protocol/: generator-c.py  generator-python.py  generator.cmake  multibus.yml  parser.py
protocol/c/: multibus_driver.h  multibus_transport.c  multibus_transport.h
